--- a/caja3/src/pages/login.astro
+++ b/caja3/src/pages/login.astro
@@ -4,7 +4,7 @@
 <html lang="es">
 <head>
     <meta charset="utf-8" />
-    <link rel="icon" type="image/png" href="https://laruta11-images.s3.amazonaws.com/menu/logo.png" />
+    <link rel="icon" type="image/png" href="https://laruta11-images.s3.amazonaws.com/menu/logo-optimized.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
     <title>La Ruta 11 - Acceso Caja</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -15,7 +15,7 @@
     <div class="login-container">
         <div class="login-card">
             <div class="logo">
-                <img src="https://laruta11-images.s3.amazonaws.com/menu/logo.png" alt="La Ruta 11" />
+                <img src="https://laruta11-images.s3.amazonaws.com/menu/logo-optimized.jpg" alt="La Ruta 11" />
             </div>
             <h1>Acceso Caja</h1>
             <form id="loginForm">
