--- a/caja3/src/pages/payment-success.astro
+++ b/caja3/src/pages/payment-success.astro
@@ -93,14 +93,14 @@ const amount = Astro.url.searchParams.get('amount');
         
 
     </style>
-    <link rel="icon" type="image/png" href="https://laruta11-images.s3.amazonaws.com/menu/logo.png">
+    <link rel="icon" type="image/png" href="https://laruta11-images.s3.amazonaws.com/menu/logo-optimized.jpg">
 </head>
 <body class="bg-gradient-to-br from-green-50 to-blue-50 min-h-screen">
 
     
     <div class="container mx-auto px-4 py-8 max-w-md">
         <div class="text-center mb-8">
-            <img src="https://laruta11-images.s3.amazonaws.com/menu/logo.png" alt="La Ruta 11" class="w-16 h-16 mx-auto mb-4" onerror="this.style.display='none'">
+            <img src="https://laruta11-images.s3.amazonaws.com/menu/logo-optimized.jpg" alt="La Ruta 11" class="w-16 h-16 mx-auto mb-4" onerror="this.style.display='none'">
             <h1 class="text-2xl font-bold text-gray-800">La Ruta 11</h1>
         </div>
 
